III-700: refactor OrganizerController:findByPartOfTitle & OrganizerController:createOrganizer
